--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ghareeb96.github.io/Keeper",
+  "homepage": "https://ghareeb96.github.io/keeper-client",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.14.1",
